# practice-deploy

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml
